
<?xml version="1.0" encoding="utf-8"?>
<!--MIT License
Copyright (c) 2016 Synelnyk Anastasiya
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ce_1958687.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/my_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".4"
            >


            <TextView
                android:id="@+id/paris_fashion_week_view"
                style="@style/AligableText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_text_view_height"
                android:text="@string/fashion_title"
                android:textSize="@dimen/title_fashion_tsize" />

            <TextView
                android:id="@+id/text_state"
                android:background="@drawable/oval_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_state"
                android:textColor="@android:color/white"
                android:text="@string/state_text"
                android:textSize="@dimen/perform_size" />


            <View
                style="@style/line"
                android:id="@+id/line1"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/start_show"
                    android:layout_width="@dimen/general_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bot"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_weight=".5"
                    android:text="@string/starting"
                    android:textSize="@dimen/layout_text_size" />

                                                                                   <TextView
                                                                                    style="@style/AligableText"
                                                                                    android:id="@+id/str_data"
                                                                                    android:layout_width="@dimen/general_layout_width"
                                                                                    android:layout_height="wrap_content"
                                                                                    android:layout_weight=".4"
                                                                                    android:layout_marginBottom="@dimen/margin_bot"
                                                                                    android:layout_marginTop="@dimen/margin_top"
                                                                                    android:text="@string/start_date"
                                                                                    android:textSize="@dimen/layout_text_size"/>


            </LinearLayout>

            <View
                style="@style/line"
                android:id="@+id/line2"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                                                                                      <TextView
                                                                                      android:id="@+id/fin_label"
                                                                                      android:layout_width="match_parent"
                                                                                      android:layout_height="match_parent"
                                                                                      android:layout_marginBottom="@dimen/margin_bot"
                                                                                      android:layout_marginTop="@dimen/margin_top"
                                                                                      android:layout_weight=".4"
                                                                                      android:text="@string/finish"
                                                                                      android:textSize="@dimen/layout_text_size" />

                <TextView
                    style="@style/AligableText"
                    android:id="@+id/fin_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bot"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_weight=".5"
                    android:text="@string/finish_date"
                    android:textSize="@dimen/layout_text_size"
                    />
                <!-- [Comment] Something wrong with formatting -->

            </LinearLayout>


            <View
                style="@style/line"
                android:id="@+id/line3"
               />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/designer"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bot"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_weight=".4"
                    android:text="@string/alexander_mc_queen"
                    android:textSize="@dimen/layout_text_size" />
 
                                                                                        <TextView
                                                                                         style="@style/AligableText"
                                                                                         android:id="@+id/stockholm"
                                                                                         android:layout_width="50dp"
                                                                                         android:layout_height="wrap_content"
                                                                                         android:layout_marginTop="@dimen/margin_top"
                                                                                         android:layout_marginBottom="@dimen/margin_bot"
                                                                                         android:layout_weight=".3"
                                                                                         android:text="@string/stockholmfall"
                                                                                         android:textSize="@dimen/layout_text_size"/>


            </LinearLayout>


            <View
                style="@style/line"
                android:id="@+id/line_fin"
                android:layout_marginTop="@dimen/margin_top"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/channel_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bot"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_weight=".4"
                    android:text="@string/channel"
                    android:textSize="@dimen/layout_text_size" />


                                                                                   <TextView
                                                                                    style="@style/AligableText"
                                                                                    android:id="@+id/spring_coutre"
                                                                                    android:layout_width="match_parent"
                                                                                    android:layout_height="wrap_content"
                                                                                    android:layout_marginBottom="@dimen/margin_bot"
                                                                                    android:layout_marginTop="@dimen/margin_top"
                                                                                    android:layout_weight=".5"
                                                                                    android:text="@string/spring_couture"
                                                                                    android:textSize="@dimen/layout_text_size"/>

            </LinearLayout>

            <View
                style="@style/line"
                android:id="@+id/line_cout"/>


            <TextView
                style="@style/AligableText"
                android:id="@+id/fashion_runway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bot"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/description"
                android:textSize="@dimen/description_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".7"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/rec_pad"


                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
